book is changed
